fixed the internal hgl semantic sql query builder